# Marpa--R2

./: .gitignore  .travis.yml  AIX.README  CITATION.cff  INSTALL_NOTES  LICENSE  Makefile  Proof.pod  README  README.md  TODO  UPDATES.md  bad.html  bump-version  bump_version  exp_exp.pl  grep.pl  html_pp_test.sh  html_xs_test.sh  methods_todo.sh  noway.pl  ts.pl  valgrind.buggy.out
.github/workflows/: ci.yml  native.yml
blog/: do_numbers.pl  round2.pl  round2_easy.pl
blog/dsl/: OP1.pm  OP2.pm  dsl3.pl
blog/dyck_hollerith/: dh_r2.pl  dh_thin.pl
blog/error/: error.pl  to_html.pl
blog/html_cfg_dsl/: Makefile  Stuifzand.pm  compile_config.pl  plot
blog/html_config/: 4blog  acme.sh  block-empty.html  block-inline-context.html  block-inline.html  block-mixed.html  block-pcdata.html  body-block.html  body-inline.html  body-mixed.html  body.sh  contents.sh  context.sh  css.html  g-block-empty.cfg  g-block-inline.cfg  g-block-mixed.cfg  g-block-pcdata.cfg  g-body-empty.cfg  g-body-inline.cfg  g-body-mixed.cfg  g-body-pcdata.cfg  g-inline-inline.cfg  inline-inline-context.html  inline-inline.html
blog/incremental/: incremental.pl  search.pl  test.sh
blog/iterative/: iterative.pl  test.in  test.out  test.sh
blog/json/: .gitignore  Makefile  bench.pl  bench100k.pl  bench1m.pl  bench2.pl  bench_file.pl  bench_orig.pl  nyt.pl  test.json  test.pl
blog/op/: OP.pm  OP1.pm  blog1.pl  blog2.pl  blog3.pl  blog4.pl  dsl_ex1.pl  dsl_ex2.pl
blog/op3/: test_op3.pl  try.sh
blog/round3/: target.pl
blog/search/: Makefile  find_ppi.pl  search.pl  test.out  test.sh
blog/sl/: Makefile  dsl1.pl  dsl3.pl  error.pl  p1000.in  rand_parens.pl  re.pl  re1000.out  sl.pl
blog/sl_announce/: sl_announce.pl
blog/slperl/: Makefile  iterative.pl  test.sh
blog/useful_playful/: MSR_catalan.pl  MSR_pascal.pl  MSR_wall.pl
blog/whitespace/: Makefile  comment.pl  prefix.out  prefix.pl  syn_engine.t  synopsis.pl
cpan/: .gdbinit  .gitignore  4list  Build.PL  Changes  INSTALL  I_AM_THE_SAFE_BRANCH  LICENSE  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  Makefile.win32  README  TODO.md  TOUCH  ada.before  bracket.pl  bracket.t  c_to_dist.sh  case.t  discard.t  do_config_h.pl  doit.pl  events.frag  events.list  forgiven.pl  jdd.pl  lc.t  marpa-problem.pl  marpa-r2-issue-254.t  meta_to_asf.pl  modulo_AFHA.errs  modulo_AHFA.out  new.pl  pod_errors.pl  pod_inlinks.pl  prepare_build_dir.pl  product2.pl  (+54 more)
cpan/author.t/: Makefile  ampersand.t  create_critic_list.pl  critic.t  display.t  meta_yaml.t  perlcriticrc  pod.t  tidy.t
cpan/core/: README  SHARED  STATIC
cpan/engine/: .gitignore  LOG_DATA  README  SHARED  STATIC  base.time-stamp
cpan/engine/read_only/: COPYING  ChangeLog  GIT_LOG.txt  Makefile.am  Makefile.in  Makefile.win32  NEWS  README  README.AIX  README.INSTALL  config.h.in  configure  configure.ac  error_codes.table  events.table  libmarpa.pc  libmarpa.pc.in  libmarpa_version.sh  marpa.c  marpa.h  marpa_ami.c  marpa_ami.h  marpa_avl.c  marpa_avl.h  marpa_codes.c  marpa_codes.h  marpa_obs.c  marpa_obs.h  marpa_slif.c  marpa_slif.h  marpa_tavl.c  marpa_tavl.h  stamp-h1  steps.table  version.m4
cpan/engine/read_only/api_docs/: api_html.tar  libmarpa_api.html  libmarpa_api.info
cpan/engine/read_only/tests/: TESTS  runtests.c
cpan/engine/read_only/tests/simple/: depr_unvalued.c  issue92a.c  issue92b.c  issue92c.c  marpa_m_test.c  marpa_m_test.h  nits.c  rule1.c  trivial.c  trivial1.c
cpan/engine/read_only/tests/tap/: basic.c  basic.h  float.c  float.h  macros.h
cpan/engine/read_only/win32/: do_config_h.pl  marpa.def
cpan/etc/: Makefile  README_shared_test.txt  check_license.pl  check_links.pl  compile_for_debug.sh  cp_libmarpa.sh  dovg.sh  libmarpa_basestamp_create.pl  libmarpa_get.pl  libmarpa_test.sh  libmarpa_timestamp.pl  pod_dump.pl  pod_errors.pl  pod_inlinks.pl  pod_links.pl  podreview  reserved_check.sh  work_to_dist.sh
cpan/experiments/: sl_ada.t  try_lr.pl  try_rl.pl  try_rr.pl
cpan/hide/: rr_rew.pl
cpan/libmarpa/: .gitignore  Makefile
cpan/libmarpa/ac/: Makefile.am  README  configure.ac
cpan/libmarpa/ac_doc/: ChangeLog  Makefile.am  README  configure.ac
cpan/libmarpa/dev/doc_dist/: configure.ac
cpan/libmarpa/test/dev/: Makefile.am  balanced.c  configure.ac  testleak.c
cpan/meta/: Makefile  make_internal_pm.pl
cpan/notes/: de.md
cpan/pod/: ASF.pod  Acknowledgements.pod  Algorithm.pod  BNF.pod  Changes.pod  Event.pod  Events.pod  Exhaustion.pod  Glade.pod  Marpa_R2.pod  NAIF.pod  Progress.pod  Scanless.pod  Semantics.pod  Support.pod  Tracing.pod  Tutorial2.pod  Vocabulary.pod
cpan/t/: 00-load.t  50d-giarank.t  50d-ranksyn.t  ah2.t  ah_numeric.t  asf_syn.t  balanced.t  bocage.t  catalan.t  chaf.t  code_diag.t  context.t  counter.t  curly.t  curly2.t  debug.t  debug_leo.t  (+110 more)
etc/: build_release  check_license.pl
html/: .gitignore  Build.PL  Changes  LICENSE  MANIFEST  MANIFEST.SKIP  META.yml  MYMETA.yml  Makefile.PL
html_sandbox/: HTML.pm.old  index.html  pseudoclass.t
list/: roadmap.txt
plans/: TODO.pod  scanning_SLIF.pod
pp/: .gitignore  Build.PL  Changes  LICENSE  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  README  TODO  pod.todo
r2/: .gdbinit  .gitattributes  .gitignore  Build.PL  Changes  LICENSE  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  README  c_dev_to_dist.sh  c_to_dist.sh  comments.t  curly.in  dovg.sh  my_suppressions  show_comments.pl  sl_astsyn.t  sl_rank.t  target.pl  thin_eq.t  typemap  ucurly.pl  work.list  xy.pl
r2/libmarpa/stage_dist/: .gitignore  Makefile.am  README  configure.ac  marpa_obs.h
sandbox/: 4so.pl  MSR_catalan.pl  MSR_pascal.pl  MSR_wall.pl  anno.pl  bal2.pl  bal2_pp.pl  balance.pl  balanced.pl  curly.out  dh_marpa.pl  dh_numbers.html  dh_prd.pl  do_blog.sh  do_numbers.pl  issue.t  leo_pi.t  range.pl  round2.pl  sixish.html  target.pl
tool/: compare.pl
xs/: .gitignore  Build.PL  Changes  LICENSE  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  README  issue.t  rank1.t  try.t  typemap
xs/libmarpa/test/dev/: .gitignore  Makefile.am  testleak.c
(+876 files in other folders)
